# cppTetrisGame_CMAKE_VERSION_FOR_LINUX

./: CMakeLists.txt  Piece.h  README.md
Score/: sb.txt
